Mixed Playground/force-app/main/default/objects/Game_Rules__c/Game_Rules__c.object-meta.xml
<CustomObject>
    <label>Game Rules</label>
    <nameField>
        <label>Game Rules Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Game Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>