Mixed Playground/force-app/main/default/objects/Game_Rules__c/fields/Game__c.field-meta.xml
<CustomField>
    <fullName>Game__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game</label>
    <referenceTo>Game__c</referenceTo>
    <relationshipLabel>Game Rules</relationshipLabel>
    <relationshipName>Game_Rules</relationshipName>
    <type>Lookup</type>
</CustomField>