Mixed Playground/force-app/main/default/objects/Game_Rules__c/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <label>Report Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>