Mixed Playground/force-app/main/default/objects/Game_Rules__c/fields/ReportId__c.field-meta.xml
<CustomField>
    <fullName>ReportId__c</fullName>
    <label>ReportId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>