Mixed Playground/force-app/main/default/objects/Game_Rules__c/fields/Rules__c.field-meta.xml
<CustomField>
    <fullName>Rules__c</fullName>
    <label>Rules</label>
    <type>TextArea</type>
</CustomField>